--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "jquery": "1.9.1 - 3",
+    "jquery": ">=3.5.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
